src/sass/layout/_header.scss
@use '../abstracts/mixins' as mixin;

/* ------------------------------- */
/* Header                          */
/* ------------------------------- */

.header {
    padding-block: var(--header-padding-block);

    &__wrapper {
        @include mixin.flex($direction: row);
        justify-content: space-between;
    }

    &__branding {
        a {
            transition: var(--header-branding-transition);

            @include mixin.hover-focus {
                opacity: var(--header-branding-opacity-hover);
            }
        }
    }

    &__toggle {
        display: none;
        border: 0;
        background: transparent;
        cursor: pointer;

        .menu-open-icon {
            display: block;
        }

        .menu-close-icon {
            display: none;
        }

        &[aria-expanded='true'] {
            .menu-open-icon {
                display: none;
            }

            .menu-close-icon {
                display: block;
            }
        }

        @media (max-width: 47.99em) {
            display: block;
        }
    }

    &__menu {
        background-color: var(--header-menu-bg);

        @media (max-width: 47.99em) {
            display: none;
            position: absolute;
            left: 0;
            width: 100%;
            height: var(--header-menu-height);
            padding-top: var(--header-menu-padding-top);
            padding-inline: var(--header-menu-padding-inline);

            a {
                color: var(--header-menu-item-clr);
            }

            .btn {
                border-color: var(--header-menu-btn-border-clr);
            }

            &[data-visible] {
                @include mixin.flex;

                display: block;
                top: var(--header-menu-pos-top);
            }

            &::after {
                content: '';
                background-image: url('../assets/images/bg-pattern-mobile-nav.svg');
                background-repeat: no-repeat;
                background-position: bottom;
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
            }
        }

        @media (min-width: 48em) {
            margin-inline: unset;
        }

        &-items {
            --menu-gap: 1rem;

            letter-spacing: var(--header-menu-tracking);
            font-size: var(--header-menu-fs);
            font-weight: var(--header-menu-fw);
            text-transform: uppercase;

            @media (max-width: 47.99em) {
                li {
                    --menu-gap: 2rem;

                    margin-block: var(--menu-gap);
                    text-align: center;
                }
            }

            @media (min-width: 48em) {
                display: inline-flex;
                align-items: center;
                gap: var(--menu-gap);
            }
        }
    }
}

